# jupyter-collaboration-mcp

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  DESIGN.md  README.md  pyproject.toml  setup.py
jupyter-config/: jupyter_collaboration_mcp.json
jupyter_collaboration_mcp/: __init__.py  __main__.py  app.py  auth.py  event_store.py  exceptions.py  handlers.py  rtc_adapter.py  tools.py  tornado_event_store.py  tornado_session_manager.py  tornado_sse_handler.py  utils.py
jupyter_collaboration_mcp/tools/: __init__.py  awareness.py  document.py  notebook.py
scripts/: setup-git-hooks.sh
scripts/git-hooks/: pre-commit
tests/: __init__.py  test_app.py  test_auth.py  test_handlers.py
